--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "database"
   ],
   "dependencies": {
-    "request": "^2.53.0",
+    "request": "humulabs/request",
     "follow": "^0.11.4",
     "errs": "^0.3.0",
     "underscore": "^1.7.0",
